Fix umalator layout overlap on desktop

--- a/umalator/app.classic.css
+++ b/umalator/app.classic.css
@@ -31,7 +31,7 @@ body {
 
 .racetrackWrapper {
 	grid-column: 2;
-	grid-row: 1 / span 3;
+	grid-row: 1;
 }
 
 #runPane {
