--- a/umalator/app.global.css
+++ b/umalator/app.global.css
@@ -72,7 +72,7 @@ a:hover {
 
 .racetrackWrapper {
 	grid-column: 2;
-	grid-row: 1 / span 3;
+	grid-row: 1;
 }
 
 .racetrackView {
